--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-  <title>Redirecionando...</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+  <meta content="Página de Links úteis para todos que desejam aprender mais sobre milhas." name="description">
+  <title>Felipe Milhas | Links</title>
 </head>
 <body>
-  <script>
-    const urlRedirecionamento = "https://decolando.felipemilhas.com.br";
-    window.location.replace(urlRedirecionamento);
-  </script>
+  <main class="container">
+
+    <h1>LINKS ÚTEIS</h1>
+
+    <a href="https://aula-gratuita.felipemilhas.com.br/" target="_blank">
+      <div class="card first">
+      </div>
+    </a>
+
+    <a href="https://api.whatsapp.com/send?phone=5511995915455&text=Ol%C3%A1!%20gostaria%20de%20saber%20mais%20sobre%20o%20grupo%20de%20alertas%20Radar%20que%20vi%20na%20sua%20página%20de%20links" target="_blank">
+      <div class="card second">
+      </div>
+    </a>
+
+    <a href="https://decolando.felipemilhas.com.br" target="_blank">
+      <div class="card third">
+      </div>
+    </a>
+
+  </main>
+
+  <footer class="footer">
+    <h4>© copyright - <span class="felipe">Felipe milhas</span></h4>
+    <div class="socialLinks">
+
+      <a href="https://www.youtube.com/@turbinandomilhas" target="_blank">
+        <div class="socialIcons">
+          <img src="./assets/img/youtube_icon_237313.svg" alt="Icone do YouTube">
+        </div>
+      </a>
+
+      <a href="https://www.instagram.com/felipemilhas_/" target="_blank">
+        <div class="socialIcons">
+          <img src="./assets/img/instagram_f_icon-icons.com_65485.svg" alt="Icone do Instagram">
+        </div>
+      </a>
+      
+      <a href="https://www.facebook.com/profile.php?id=100071971836165" target="_blank">
+        <div class="socialIcons">
+          <img src="./assets/img/facebook_icon_237585.svg" alt="Icone do Facebook">
+        </div>
+      </a>
+
+    </div>
+  </footer>
 </body>
 </html>
