--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <h1>LINKS ÚTEIS</h1>
 
-    <a href="https://tubinando.felipemilhas.com.br/" target="_blank">
+    <a href="https://turbinando.felipemilhas.com.br/" target="_blank">
       <div class="card first">
       </div>
     </a>
