Fix animations and social links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
   <meta content="Página de Links úteis para todos que desejam aprender mais sobre milhas." name="description">
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>Dr. Anderson Cabrera Viana</title>
 </head>
 <body>
@@ -18,18 +17,15 @@
     </div>
 
     <a href="https://www.google.com/maps/place/Cl%C3%ADnica+Odontol%C3%B3gica+-+Dr.+Anderson+Viana/@-23.5413326,-46.5651001,17z/data=!3m1!4b1!4m6!3m5!1s0x94ce5f9693168fdb:0x336240f590c55dd7!8m2!3d-23.5413326!4d-46.5651001!16s%2Fg%2F11sbhzcb5f?entry=ttu" target="_blank">
-      <div class="card first" data-aos="fade-right">
-      </div>
+      <img src="./assets/img/nosso-trabalho.png" class="card"/>
     </a>
 
     <a href="https://api.whatsapp.com/send?phone=5511916083522&text=Ol%C3%A1!%20gostaria%20de%20agendar%20uma%20avaliação%20que%20vi%20no%20seu%20site" target="_blank">
-      <div class="card second" data-aos="fade-left">
-      </div>
+      <img src="./assets/img/agendamento.png" class="card"/>
     </a>
 
     <a href="https://api.whatsapp.com/send?phone=5511916083522&text=Ol%C3%A1!%20estou%20com%20a%20segunte%20dúvida%20..." target="_blank">
-      <div class="card third" data-aos="fade-right">
-      </div>
+      <img src="./assets/img/duvidas-gerais.png" class="card"/>
     </a>
 
   </main>
@@ -38,19 +34,13 @@
     <h4>© Dr. Anderson Cabrera Viana - 2023</h4>
     <div class="socialLinks">
 
-      <a href="https://www.youtube.com/@turbinandomilhas" target="_blank">
-        <div class="socialIcons">
-          <img src="./assets/img/youtube_icon_237313.svg" alt="Icone do YouTube">
-        </div>
-      </a>
-
-      <a href="https://www.instagram.com/felipemilhas_/" target="_blank">
+      <a href="https://instagram.com/dr_andersoncviana?igshid=NzZlODBkYWE4Ng==" target="_blank">
         <div class="socialIcons">
           <img src="./assets/img/instagram_f_icon-icons.com_65485.svg" alt="Icone do Instagram">
         </div>
       </a>
       
-      <a href="https://www.facebook.com/profile.php?id=100071971836165" target="_blank">
+      <a href="https://www.facebook.com/profile.php?id=100089959422397&mibextid=ZbWKwL" target="_blank">
         <div class="socialIcons">
           <img src="./assets/img/facebook_icon_237585.svg" alt="Icone do Facebook">
         </div>
@@ -58,10 +48,5 @@
 
     </div>
   </footer>
-
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
 </body>
 </html>
