--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
-  <meta content="Página de Links úteis para todos que desejam aprender mais sobre milhas." name="description">
+  <meta content="Página de Links úteis para todos que desejam a saber mais sobre odontologia." name="description">
   <title>Dr. Anderson Cabrera Viana</title>
 </head>
 <body>
