--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>Dr. Anderson Cabrera Viana</h1>
     </div>
 
-    <a href="https://www.google.com/maps/place/Cl%C3%ADnica+Odontol%C3%B3gica+-+Dr.+Anderson+Viana/@-23.5413326,-46.5651001,17z/data=!3m1!4b1!4m6!3m5!1s0x94ce5f9693168fdb:0x336240f590c55dd7!8m2!3d-23.5413326!4d-46.5651001!16s%2Fg%2F11sbhzcb5f?entry=ttu" target="_blank">
+    <a href="https://anderviana.com.br/" target="_blank">
       <img src="./assets/img/nosso-trabalho.png" class="card"/>
     </a>
 
